--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "homepage": "http://ZeLars3.github.io/storybook-toast",
-  "name": "toast",
+  "name": "toast-storybook",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@craco/craco": "^6.4.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -69,7 +69,6 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
-    "@svgr/cli": "^6.3.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
